[package]
name = "simple-stream-pub"
version = "0.1.0"
authors = ["Gustavo Belbruno <gustavobelbruno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "chrysalis-2" }
